actualizacion taller evania

--- a/desaprender-inscripcion.html
+++ b/desaprender-inscripcion.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="header3 cid-r7TvRGX9xJ mbr-parallax-background" id="header3-2s">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header3 cid-r7TvRGX9xJ mbr-parallax-background" id="header3-2s">
 
     
 
