--- a/formacion.html
+++ b/formacion.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="header6 cid-rt1zFkq1uU" id="header6-4h">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header6 cid-rt1zFkq1uU" id="header6-4h">
 
     
 
@@ -62,12 +62,11 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><span style="font-weight: normal;">Adultos conscientes, niños felices
-</span></h1>
+                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><span style="font-weight: normal;">Acompañamiento de la infancia</span></h1>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">Formación teórico vivencial en el acompañamiento de la infancia. 
 <br>Desarrollo saludable desde la gestación a la adolescencia.&nbsp;<br></p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="formacion.html#timeline1-4n">AGENDA 2019</a>
-                        <a class="btn btn-md btn-white-outline display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSebxnVcWHBN_r28F7q2kYXiMf3pWqd_OLJAB1jtVeyDFe0gtQ/viewform?usp=sf_link" target="_blank">CUPOS ESPECIALES</a></div>
+                        <a class="btn btn-md btn-white-outline display-4" href="http://arami.org/prevencion.html" target="_blank">MAS INFORMACION</a></div>
             </div>
         </div>
     </div>
@@ -89,7 +88,7 @@
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">1er Módulo<br>19 al 21 de Julio</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">2do Módulo<br>4 al 6 de Octubre</h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">
                         La formación está dirigida a terapeutas, profesionales de la salud, maestros, educadores, padres y madres, profesionales que trabajen en relación interpersonal, o aquellas personas interesadas en su proceso personal. Ofreciendo también a los participantes, la oportunidad de revisitar su propia infancia.
@@ -325,13 +324,13 @@ Psicologéa de los Eneatipos en Brasil. Es el autor de los libros «El arte de
                     <img src="assets/images/fondo1-844x527.png" alt="Mobirise" title="">
                 </div>
                 <div class="align-left aside-content">
-                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2">Descuento especial</h2>
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2">Más información</h2>
                     <div class="mbr-section-text">
-                        <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-7">Desde La Educación Prohibida y Aramí estamos ofreciendo cupos especiales para quienes lo necesiten, dejando el valor cáda módulo de 3 días a la mitad de precio.<br></p>
-                        <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2">us$ 100 &nbsp;&nbsp;<span class="cost">us$ 200</span><br></p>
+                        <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-7">Desde La Educación Prohibida invitamos a esta formación de la Escuela Aramí, conocé más en su sitio web.<br></p>
+                        
                     </div>
                     <!--Btn-->
-                    <div class="mbr-section-btn pt-3 align-left"><a href="https://docs.google.com/forms/d/e/1FAIpQLSebxnVcWHBN_r28F7q2kYXiMf3pWqd_OLJAB1jtVeyDFe0gtQ/viewform?usp=sf_link" class="btn btn-primary display-4" target="_blank">APLICAR</a></div>
+                    <div class="mbr-section-btn pt-3 align-left"><a href="http://arami.org/prevencion.html" class="btn btn-primary display-4" target="_blank">WEB ARAMÍ</a></div>
                 </div>
             </div>
         </div>
