--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
 
     
 
@@ -123,9 +123,9 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Formación Acompañamiento de la Infancia</strong><br>Escuela Aramí - Evania Reichert</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Desde La Educación Prohibida y Aramí queremos ofrecer 10 cupos especiales con descuento para educadores y personas que trabajan en el acompañamiento de la infancia.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Desde La Educación Prohibida invitamos a esta formación de la Escuela Aramí para educadores y personas que trabajan en el acompañamiento de la infancia.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="formacion.html#header6-4h" class="btn btn-primary-outline display-4">APLICAR</a></div>
+                    <div class="mbr-section-btn text-center"><a href="http://arami.org/prevencion.html" class="btn btn-primary-outline display-4" target="_blank">APLICAR</a></div>
                 </div>
             </div>
 
