--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
 
     
 
@@ -135,10 +135,10 @@
                         <img src="assets/images/grupo-1-676x332.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><strong>Ciclo Desaprender a la Gorra</strong><br>Buenos Aires</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Un espacio semanal de encuentro con aporte voluntario para aprender y reflexionar sobre perspectivas alternativas, innovadoras y transformadoras en educación.&nbsp;</p>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>Ciclo Desaprender</strong><br>Buenos Aires</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Un espacio de formación mensual para aprender y reflexionar sobre perspectivas alternativas, innovadoras y transformadoras en educación.&nbsp;</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="taller.html" class="btn btn-primary-outline display-4">A PARTIR DEL 13/6</a></div>
+                    <div class="mbr-section-btn text-center"><a href="taller.html" class="btn btn-primary-outline display-4">PRÓXIMAMENTE</a></div>
                 </div>
             </div>
 
