--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
 
     
 
@@ -62,7 +62,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 120%;">
-                <img src="assets/images/image823-914x442.png" alt="Mobirise" title="">
+                <img src="assets/images/titulo-910x400.png" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
@@ -122,10 +122,10 @@
                         <img src="assets/images/fondo1-1-676x422.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><strong>Formación Acompañamiento de la Infancia</strong><br>Escuela Aramí - Evania Reichert</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Desde La Educación Prohibida invitamos a esta formación de la Escuela Aramí para educadores y personas que trabajan en el acompañamiento de la infancia.</p>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>Consultoría en Pedagogías Alternativas</strong><br>Diseño y asesoramiento de proyectos</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Con más de 10 años de experiencia en investigación pedagógica, diversos modelos institucionales y seguimiento de gestiones educativas, ofrecemos una instancia de acompañamiento a espacios educativas en formación o proceso de transformación.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="http://arami.org/prevencion.html" class="btn btn-primary-outline display-4" target="_blank">APLICAR</a></div>
+                    <div class="mbr-section-btn text-center"><a href="http://wa.me/5491142970879" class="btn btn-primary-outline display-4" target="_blank">CONSULTAR</a></div>
                 </div>
             </div>
 
