--- a/formacion.html
+++ b/formacion.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header6 cid-rt1zFkq1uU" id="header6-4h">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="header6 cid-rt1zFkq1uU" id="header6-4h">
 
     
 
