--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
 
     
 
@@ -135,10 +135,10 @@
                         <img src="assets/images/grupo-1-676x332.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><strong>Ciclo Desaprender</strong><br>Buenos Aires</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Un espacio de formación mensual para aprender y reflexionar sobre perspectivas alternativas, innovadoras y transformadoras en educación.&nbsp;</p>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>Curso Intensivo&nbsp;</strong><br>Mendoza</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Un curso intensivo de 5 horas para conocer las claves de la educación alternativa con una mirada en la construcción de proyectos educativos integrales.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="taller.html" class="btn btn-primary-outline display-4">PRÓXIMAMENTE</a></div>
+                    <div class="mbr-section-btn text-center"><a href="mendoza.html" class="btn btn-primary display-4">26 DE OCTUBRE</a></div>
                 </div>
             </div>
 
