--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
 
     
 
@@ -136,7 +136,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Curso Intensivo&nbsp;</strong><br>Mendoza</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Un curso intensivo de 5 horas para conocer las claves de la educación alternativa con una mirada en la construcción de proyectos educativos integrales.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Un curso intensivo de 4 horas para conocer las claves de la educación alternativa con una mirada en la construcción de proyectos educativos integrales.</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="mendoza.html" class="btn btn-primary display-4">26 DE OCTUBRE</a></div>
                 </div>
