--- a/mendoza.html
+++ b/mendoza.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own website</a></section><section class="header3 cid-rDjcNPfXMA mbr-parallax-background" id="header3-56">
+<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="header3 cid-rDjcNPfXMA mbr-parallax-background" id="header3-56">
 
     
 
@@ -150,7 +150,7 @@
     <div class="container pt-4 mt-2">
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">Contenidos
 </h2>
-        <h3 class="mbr-section-subtitle pb-5 align-center mbr-fonts-style display-5">En esta modalidad reducida de 1 jornadas de 5 horas nos concentraremos en los siguientes contenidos:
+        <h3 class="mbr-section-subtitle pb-5 align-center mbr-fonts-style display-5">En esta modalidad reducida de 1 jornadas de 4 horas nos concentraremos en los siguientes contenidos:
 </h3>
         <div class="row justify-content-center">
             <div class="cards-block">
@@ -211,7 +211,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-fonts-style display-5">La actividad entrega certificación a cargo de ISTEEC.</div>
+            <div class="section-text align-center mbr-fonts-style display-5">La actividad entrega certificación a cargo de ISTEEC y la Fundación Pulso Educativo.</div>
             <hr class="line" style="width: 25%;">
         </div>
         </div>
