--- a/curso/suteba.html
+++ b/curso/suteba.html
@@ -74,7 +74,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="cid-rFi4xErP3G" id="video2-2d">
+<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section><section class="cid-rFi4xErP3G" id="video2-2d">
 
     
     
@@ -384,7 +384,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
                             $2000&nbsp;<span class="cost">$3300</span></p>
                     </div>
                     <!--Btn-->
-                    <div class="mbr-section-btn pt-3 align-left"><a href="https://www.mercadopago.com.ar/checkout/v1/redirect?preference-id=50942394-a1a54d95-24b0-430c-9719-94a82493d7c9" class="btn btn-white display-4" target="_blank">
+                    <div class="mbr-section-btn pt-3 align-left"><a href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-a1a54d95-24b0-430c-9719-94a82493d7c9" class="btn btn-white display-4" target="_blank">
                             INSCRIBIRME</a></div>
                 </div>
             </div>
