--- a/mendoza.html
+++ b/mendoza.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header3 cid-rDjcNPfXMA mbr-parallax-background" id="header3-56">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="header3 cid-rDjcNPfXMA mbr-parallax-background" id="header3-56">
 
     
 
@@ -71,8 +71,8 @@
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-5"><br><strong><br>Sábado 26 de Octubre -&nbsp;</strong><strong>15 a 19hs<br></strong>Coordinado por German Doin<br></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="page7.html">SABER MÁS</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="taller-inscripcion.html" target="_blank">PARTICIPAR</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="mendoza.html#content4-57">SABER MÁS</a>
+                    <a class="btn btn-md btn-white-outline display-4" href="mendoza.html#info1-5d">PARTICIPAR</a></div>
             </div>
         </div>
     </div>
