--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
 
     
 
@@ -62,7 +62,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 120%;">
-                <img src="assets/images/image823-914x442.png" alt="Mobirise" title="">
+                <a href="https://desaprenderonline.com/curso/"><img src="assets/images/logo-nov-1085x500.png" alt="Mobirise" title=""></a>
             </div>
 
             <div class="media-content">
