--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="header3 cid-rdSqKphtix mbr-parallax-background" id="header3-3n">
 
     
 
@@ -62,7 +62,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 120%;">
-                <a href="https://desaprenderonline.com/curso/"><img src="assets/images/logo-nov-1085x500.png" alt="Mobirise" title=""></a>
+                <a href="https://desaprenderonline.com/curso/"><img src="assets/images/logo-dic-1116x529.png" alt="Mobirise" title=""></a>
             </div>
 
             <div class="media-content">
@@ -135,10 +135,10 @@
                         <img src="assets/images/grupo-1-676x332.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><strong>Curso Intensivo&nbsp;</strong><br>Mendoza</h4>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>Curso Intensivo&nbsp;</strong><br>Una perspectiva integrativa</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Un curso intensivo de 4 horas para conocer las claves de la educación alternativa con una mirada en la construcción de proyectos educativos integrales.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="mendoza.html" class="btn btn-primary display-4">26 DE OCTUBRE</a></div>
+                    <div class="mbr-section-btn text-center"><a href="http://wa.me/5491142970879" class="btn btn-primary-outline display-4">CONSULTAR</a></div>
                 </div>
             </div>
 
