--- a/curso/mp.html
+++ b/curso/mp.html
@@ -33,8 +33,8 @@
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1"><strong>¡Que alegría!</strong></h1>
                 <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">Para acceder al curso debes realizar el pago y completar tu inscripción. 
 <br>El sistema de pagos Mercado Pago te ofrecerá diferentes modalidades de pago.
-<br>Una vez realizado el pago exitosamente el sitio te enviará al grupo donde funciona el curso.&nbsp;</p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-cf6328bf-ee4c-471a-8829-406070b57a19" target="_blank">IR A MERCADO PAGO</a></div>
+<br>Una vez realizado el pago exitosamente el sitio te enviará al grupo donde funciona el curso.&nbsp;<br>(Escribenos si el sistema no te redirige automáticamente)<br></p>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-a78184c2-bd2b-40f5-9190-d05eb02ac78c" target="_blank">IR A MERCADO PAGO</a></div>
             </div>
         </div>
     </div>
@@ -42,7 +42,7 @@
     
 </section>
 
-<section class="engine"><a href="https://mobiri.se/a">online website builder</a></section><section class="mbr-section info1 cid-ri7ohx3Vin" id="info1-1y">
+<section class="engine"><a href="https://mobiri.se/k">how to develop free website</a></section><section class="mbr-section info1 cid-ri7ohx3Vin" id="info1-1y">
 
     
 
