--- a/curso/paypal.html
+++ b/curso/paypal.html
@@ -32,8 +32,8 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1"><strong>¡Que alegría!</strong></h1>
                 <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">Para acceder al curso debes realizar el pago con tarjeta de crédito y completar tu inscripción. 
-<br>El sistema de pagos Paypal te pedirá que crees un usuario en un proceso muy sencillo.<br>Una vez realizado el pago exitosamente el sitio te dirigirá al grupo donde funciona el curso.&nbsp;</p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ALNYSBGMAT2AE" target="_blank">IR A PAYPAL</a></div>
+<br>El sistema de pagos Paypal te pedirá que crees un usuario en un proceso muy sencillo.<br>Una vez realizado el pago exitosamente el sitio te dirigirá al grupo donde funciona el curso.&nbsp;<br><em>(Escribenos si el sistema no te redirige automáticamente)</em></p>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=N7P8EVHASQJJL" target="_blank">IR A PAYPAL</a></div>
             </div>
         </div>
     </div>
@@ -41,7 +41,7 @@
     
 </section>
 
-<section class="engine"><a href="https://mobiri.se/p">website templates free download</a></section><section class="mbr-section info1 cid-ri7oLpli5f" id="info1-1z">
+<section class="engine"><a href="https://mobiri.se/k">develop your own website</a></section><section class="mbr-section info1 cid-ri7oLpli5f" id="info1-1z">
 
     
 
