--- a/curso/index.html
+++ b/curso/index.html
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">how to create a website for free</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
+<section class="engine"><a href="https://mobiri.se/o">portfolio web templates</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
 
     
     
@@ -355,7 +355,7 @@
                         <span class="price-value mbr-fonts-style display-5">us$
                         </span>
                         <span class="price-figure mbr-fonts-style display-1">
-                            39</span>
+                            69</span>
                         <small class="price-term mbr-fonts-style display-7">&nbsp;</small>
                     </div>
                 </div>
@@ -377,8 +377,7 @@
                         <span class="price-value mbr-fonts-style display-5">
                             $
                         </span>
-                        <span class="price-figure mbr-fonts-style display-1">
-                            1499</span>
+                        <span class="price-figure mbr-fonts-style display-1">2499</span>
                         <small class="price-term mbr-fonts-style display-7">&nbsp;</small>
                     </div>
                 </div>
