--- a/curso/index.html
+++ b/curso/index.html
@@ -38,8 +38,15 @@
 <!-- End Facebook Pixel Code -->
   
   
-  
+<script>
+  fbq('track', 'InitiateCheckout');
+</script>
+
+
 </head>
+
+
+
 <body>
   <section class="header3 cid-rGc9KXgnyY mbr-parallax-background" id="header3-2u">
 
@@ -408,7 +415,14 @@
 </li><li class="list-group-item">Materiales</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="mp.html" class="btn btn-primary display-4" target="_blank">QUIERO PARTICIPAR</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5">
+
+
+<a href="mp.html" class="btn btn-primary display-4" target="_blank">QUIERO PARTICIPAR</a>
+
+
+
+</div>
                 </div>
             </div>
 
