pixel y mejora navegacion

--- a/curso/index.html
+++ b/curso/index.html
@@ -19,7 +19,8 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-<!-- Facebook Pixel Code -->
+  
+  <!-- Facebook Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -37,16 +38,7 @@
 /></noscript>
 <!-- End Facebook Pixel Code -->
   
-  
-<script>
-  fbq('track', 'InitiateCheckout');
-</script>
-
-
 </head>
-
-
-
 <body>
   <section class="header3 cid-rGc9KXgnyY mbr-parallax-background" id="header3-2u">
 
@@ -74,7 +66,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">how to create a website for free</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
+<section class="engine"><a href="https://mobiri.se/u">bootstrap html templates</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
 
     
     
@@ -415,14 +407,7 @@
 </li><li class="list-group-item">Materiales</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5">
-
-
-<a href="mp.html" class="btn btn-primary display-4" target="_blank">QUIERO PARTICIPAR</a>
-
-
-
-</div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="mp.html" class="btn btn-primary display-4" target="_blank">QUIERO PARTICIPAR</a></div>
                 </div>
             </div>
 
