--- a/curso/index.html
+++ b/curso/index.html
@@ -20,23 +20,7 @@
   <link rel="stylesheet" href="assets/gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  <!-- Facebook Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '2210428312595198');
-  fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Facebook Pixel Code -->
+  
   
 </head>
 <body>
@@ -66,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/u">bootstrap html templates</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
+<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
 
     
     
@@ -145,9 +129,9 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
-                    <li><strong>100% ONLINE Y A TU RITMO&nbsp;</strong>- una experiencia que te permite participar en cualquier lugar desde tu PC, movil o tablet. Todo nuestro material, archivos, intercambios y sesiones de preguntas en vivo, estarán disponibles en un grupo cerrado del Curso, para acceder cuando lo desees.</li>
+                    <li><strong>100% ONLINE Y A TU RITMO&nbsp;</strong>- una experiencia que te permite participar en cualquier lugar desde tu PC, movil o tablet. Todo nuestro material, archivos e intercambios estarán disponibles en un grupo cerrado del Curso, para acceder cuando lo desees. El curso no tiene una fecha de inicio, ni un tiempo limitado. Una vez que comienzar puedes elegir cuando comenzar y a que ritmo.</li>
                     <li><strong>PERSPECTIVA CRÍTICA E INTEGRAL&nbsp;</strong>- es el único curso que construye una perspectiva integral de la educación alternativa, basada en el conocimiento concreto de experiencias reales en más de 12 países. Nuestra mirada integral es clave para escuelas, espacios alternativos o la crianza y acompañamiento de la infancia.&nbsp;</li>
-                    <li><strong>INTERCAMBIOS COLECTIVOS</strong>&nbsp;- un espacio de foro para enriquecer tu experiencia en la interacción con otros participantes de diferentes partes del mundo y las sesiones en vivo para responder tus preguntas e inquietudes y ofrecerte experiencias de contacto directo con referentes y expertos en la temática.</li>
+                    <li><strong>INTERCAMBIOS COLECTIVOS</strong>&nbsp;- un espacio de foro para enriquecer tu experiencia en la interacción con otros participantes de diferentes partes del mundo y responder tus preguntas e inquietudes.</li>
                 </ol>
             </div>
         </div>
@@ -470,7 +454,7 @@
                         </div>
                         <div id="collapse3_11" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_11">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">Ténicamente sólo tienes que contar con una cuenta en Facebook, ya que todo el curso se desarrollará en un grupo cerrado que nos permitirá mantener conversaciones, compartir materiales y videos.</p>
+                                <p class="mbr-fonts-style panel-text display-7">Ténicamente sólo tienes que contar con una cuenta en Facebook, ya que todo el curso se desarrolla en un grupo cerrado que nos permitirá mantener conversaciones, compartir materiales y videos.</p>
                             </div>
                         </div>
                     </div>
