--- a/curso/mp.html
+++ b/curso/mp.html
@@ -19,23 +19,6 @@
   <link rel="stylesheet" href="assets/gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-    <!-- Facebook Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '2210428312595198');
-  fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Facebook Pixel Code -->
   
   
 </head>
@@ -56,7 +39,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/q">free responsive website templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rOagSRuW8W" id="gallery3-35">
+<section class="engine"><a href="https://mobiri.se/l">free web templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rOagSRuW8W" id="gallery3-35">
 
     
 
@@ -84,7 +67,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><a href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-cf6328bf-ee4c-471a-8829-406070b57a19" target="_blank">Confirma tu Pago&nbsp;aqui</a></h4>
-                        <p class="mbr-text mbr-fonts-style align-left display-7">Para acceder al curso debes realizar el pago. El sistema de pagos Mercado Pago te ofrecerá diferentes medios de pago, desde tarjetas de crédito y debito, rapipago, cajeros automáticos y transferencia bancaria.<br></p>
+                        <p class="mbr-text mbr-fonts-style align-left display-7">El sistema de pagos Mercado Pago te ofrecerá diferentes medios de pago, desde tarjetas de crédito y debito, rapipago, cajeros automáticos y transferencia bancaria.<br><strong><a href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-cf6328bf-ee4c-471a-8829-406070b57a19" target="_blank">REALIZA TU PAGO AQUÍ</a></strong></p>
                     </div>
                 </div>
             </div>
