--- a/curso/paypal.html
+++ b/curso/paypal.html
@@ -19,23 +19,7 @@
   <link rel="stylesheet" href="assets/gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  <!-- Facebook Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '2210428312595198');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Facebook Pixel Code -->
+  
   
 </head>
 <body>
@@ -55,7 +39,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/n">simple website templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rO9E5GJ3AQ" id="gallery3-30">
+<section class="engine"><a href="https://mobiri.se/l">free web templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rO9E5GJ3AQ" id="gallery3-30">
 
     
 
@@ -82,9 +66,9 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
                         <img src="assets/images/888151f8-a6f6-4385-b12d-92e5ea57263a-676x380.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">Realiza tu pago con tarjeta de crédito via Paypal</h4>
+                        <h4 class="card-title mbr-fonts-style display-7"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=N7P8EVHASQJJL" target="_blank">Realiza tu pago con tarjeta de crédito via Paypal</a></h4>
                         <p class="mbr-text mbr-fonts-style align-left display-7">Puedes optar por realizar el pago con tarjeta de crédito via Paypal. &nbsp;Si no tienes usuario, el sistema de pagos Paypal te pedirá que crees uno. Es un proceso muy sencillo.
-<br><strong><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ALNYSBGMAT2AE" target="_blank">IR A PAYPAL AHORA</a></strong></p>
+<br><strong><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=N7P8EVHASQJJL" target="_blank">IR A PAYPAL AHORA</a></strong></p>
                     </div>
                 </div>
             </div>
