--- a/curso/mp.html
+++ b/curso/mp.html
@@ -19,23 +19,7 @@
   <link rel="stylesheet" href="assets/gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  <!-- Facebook Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '2210428312595198');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Facebook Pixel Code -->
+  
   
 </head>
 <body>
@@ -55,7 +39,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/l">free web templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rOagSRuW8W" id="gallery3-35">
+<section class="engine"><a href="https://mobiri.se/l">free website templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rOagSRuW8W" id="gallery3-35">
 
     
 
@@ -82,8 +66,8 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
                         <img src="assets/images/81183fa0-8160-4576-b779-7df73329d88d-676x380.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><a href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-cf6328bf-ee4c-471a-8829-406070b57a19" target="_blank">Confirma tu Pago&nbsp;aqui</a></h4>
-                        <p class="mbr-text mbr-fonts-style align-left display-7">El sistema de pagos Mercado Pago te ofrecerá diferentes medios de pago, desde tarjetas de crédito y debito, rapipago, cajeros automáticos y transferencia bancaria.<br><strong><a href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-cf6328bf-ee4c-471a-8829-406070b57a19" target="_blank">REALIZA TU PAGO AQUÍ</a></strong></p>
+                        <h4 class="card-title mbr-fonts-style display-7"><a href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-a78184c2-bd2b-40f5-9190-d05eb02ac78c" target="_blank">Confirma tu Pago&nbsp;aqui</a></h4>
+                        <p class="mbr-text mbr-fonts-style align-left display-7">El sistema de pagos Mercado Pago te ofrecerá diferentes medios de pago, desde tarjetas de crédito y debito, rapipago, cajeros automáticos y transferencia bancaria.<br><strong><a href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-a78184c2-bd2b-40f5-9190-d05eb02ac78c" target="_blank">REALIZA TU PAGO AQUÍ</a></strong></p>
                     </div>
                 </div>
             </div>
