--- a/curso/index.html
+++ b/curso/index.html
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/t">free amp templates</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
+<section class="engine"><a href="https://mobiri.se/f">easy web maker</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
 
     
     
