--- a/curso/unidades.html
+++ b/curso/unidades.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-128x128.png" type="image/x-icon">
   <meta name="description" content="Accede a todos los contenidos del curso desde un solo lugar.">
-  
+  <meta property="og:image" content="https://desaprenderonline.com/curso/assets/images/image3721.png" />
+
   
   <title>Unidades</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
